Buggy commit with layout problems

--- a/css/fonts.css
+++ b/css/fonts.css
@@ -7,8 +7,7 @@
 
 code {
 	font-family: fragment, monospace;
-	font-size: 0.85em;
-	font-weight: bold;
+	font-size: 0.9em;
 }
 
 .small-caps {
