--- a/css/styles.css
+++ b/css/styles.css
@@ -113,10 +113,63 @@
 
 #page corner {
 	z-index: 1000;
-	font-size: 0.8em;
+	font-size: 0.9em;
 	position: absolute;
     bottom: 0%;
-    right: 0%;
-	color: grey;
+    left: 0%;
+	transform: translateY(2.8em);
+	color: black;
 	mix-blend-mode: difference;
+	font-weight: bold;
 }
+
+#page corner a {
+	font-weight: normal;
+}
+
+#page article {
+	align-items: center;
+	align-items: start;
+}
+
+h4 {
+	margin-block-start: 0em;
+	margin-block-end: 0em;
+}
+
+#page corner p {
+	display: inline-block;
+}
+
+#page corner p:not(:last-child):after {
+	content: " | ";
+	color: var(--light-gray);
+}
+
+table tbody tr td p {
+	margin-top: 0px;
+	margin-bottom: 0px;
+}
+
+footer p {
+	visibility: hidden;
+}
+
+table tbody td {
+	padding-left: 0.75em;
+	padding-right: 0.75em;
+}
+
+table tbody td {
+	border-bottom-width: 1px !important;
+	border-bottom-color: lightgrey !important;
+	border-bottom-style: solid;
+}
+
+/* table thead th:nth-child(even) {
+	background-color: lightgrey;
+}
+
+table tbody td:nth-child(odd) {
+	background-color: lightgrey;
+} */
